# Qt-YOLOv8

./: CMakeLists.txt  readme.md
include/: yolov8_obb_onnx.cpp  yolov8_obb_onnx.h  yolov8_onnx.cpp  yolov8_onnx.h  yolov8_pose_onnx.cpp  yolov8_pose_onnx.h  yolov8_seg_onnx.cpp  yolov8_seg_onnx.h  yolov8_utils.cpp  yolov8_utils.h
src/: QtYOLO.cpp  QtYOLO.h  QtYOLO.ui  main.cpp
